--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,6 +22,48 @@
     <a href="https://www.instagram.com" target="_blank  ">Press Here</a>
     
     <img src="/25870643.jpg" alt="my pic" style="width: 100px;border: 2px dashed chocolate;">
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, repellendus? Incidunt amet fugit omnis provident!</p>
     
+    <ol type="I">
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+    </ol>
+
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+    </ul>
+
+    <table border="2">
+        <thead>
+            <tr>
+                <th>Subject</th>
+                <th>Score</th>
+                <th>Grade</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>Maths</td>
+                <td>96</td>
+                <td>S</td>
+            </tr>
+            <tr>
+                <td>Science</td>
+                <td>60</td>
+                <td>C</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <th colspan="3">Result:Pass</th>
+        </tfoot>
+    </table>
+
 </body>
 </html>
